# market-daily-wechat-report

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-report.yml
config/: watchlist.yml
market_daily_wechat_report/: __init__.py  config.py  dedupe.py  formatting.py  main.py  models.py  push.py  report.py  watchlist.py
market_daily_wechat_report/data/: a_share.py  us_market.py  utils.py
tests/: test_dedupe.py  test_main.py  test_push.py  test_report.py  test_watchlist.py
