[project]
name = "market-daily-wechat-report"
version = "0.1.0"
description = "Generate daily A-share and US-market close reports and push them to WeChat."
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.16.0",
  "yfinance>=0.2.40",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
  "pandas>=2.2.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
